--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.0",
     "recoil": "^0.6.1",
     "styled-components": "^5.3.5",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
   },
